# RohiRo

./: .gitignore  DECISIONS.md  README.md  docker-compose.yml  package.json  pyproject.toml  turbo.json
api/: digest.py  main.py
api/agents/: base.py
api/agents/comms/: agent.py
api/agents/memory/: agent.py
api/config/: __init__.py  settings.py
api/memory/: __init__.py  consolidate.py  db.py  embeddings.py  retrieval.py  schema.sql
api/observability/: __init__.py  claude.py  logging.py  tracing.py
api/routes/: approvals.py  calendar.py  chat.py  code.py  files.py  finance.py  health.py  inbox.py  jobs.py  memory.py  research.py  settings.py  trace.py  voice.py
api/supervisor/: __init__.py  approval.py  graph.py  router.py
api/supervisor/prompts/: system.md
api/tools/: __init__.py  base.py
cli/: ro.py
docs/: demo.md  mobile-access.md  voice-shortcut.md
imessage/: listener.py
infra/backup/: nightly.sh
infra/launchd/: ro.api.plist  ro.backup.plist  ro.consolidate.plist  ro.digest.plist  ro.imessage.plist  ro.telegram.plist  ro.web.plist
scripts/: bootstrap.sh  healthcheck.sh  seed_profile.py  setup_keys.py  setup_keys.sh
telegram/: bot.py
tests/evals/: memory_tasks.yaml
tests/integration/: test_memory_agent.py  test_smoke.py
voice/: handler.py
web/: package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx
web/app/calendar/: page.tsx
web/app/code/: page.tsx
web/app/files/: page.tsx
web/app/finance/: page.tsx
web/app/health/: page.tsx
web/app/inbox/: page.tsx
web/app/jobs/: page.tsx
web/app/memory/: page.tsx
web/app/overview/: page.tsx
web/app/research/: page.tsx
web/app/settings/: page.tsx
web/components/calendar/: WeekView.tsx
web/components/code/: RepoGrid.tsx
web/components/editorial/: Divider.tsx  Hero.tsx  PageHeader.tsx
web/components/files/: FilesView.tsx
web/components/finance/: FinanceView.tsx
web/components/health/: HealthCards.tsx
web/components/inbox/: InboxView.tsx
web/components/jobs/: JobsKanban.tsx
web/lib/: api.ts  sse.ts  utils.ts
web/public/: manifest.json
(+7 files in other folders)
