[project]
name = "ro-agent-os"
version = "0.1.0"
description = "ro's personal agent operating system"
requires-python = ">=3.12"
dependencies = [
    # api
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",

    # supervisor + agents
    "langgraph>=0.2.40",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "anthropic>=0.39.0",
    "openai>=1.50.0",

    # memory
    "asyncpg>=0.30.0",
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.0",
    "redis[hiredis]>=5.1.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",

    # observability
    "langfuse>=2.50.0",
    "structlog>=24.4.0",

    # secrets
    "keyring>=25.4.0",

    # tools
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.146.0",
    "PyGithub>=2.4.0",
    "slack-sdk>=3.33.0",
    "plaid-python>=24.0.0",
    "python-telegram-bot>=21.6.0",
    "playwright>=1.47.0",
    "tiktoken>=0.8.0",

    # voice
    "openai-whisper",

    # mac integrations
    "pyobjc-core>=10.3; platform_system=='Darwin'",
    "pyobjc-framework-Cocoa>=10.3; platform_system=='Darwin'",

    # cli
    "typer>=0.12.5",
    "rich>=13.8.0",

    # backup
    "google-cloud-storage>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
    "mypy>=1.11.0",
    "types-redis",
]

[project.scripts]
ro = "cli.ro:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "cli", "voice", "imessage", "telegram"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
